feat(perf): implement critical CSS optimization and fix build issues
- Add Beasties-powered Critical CSS optimization for faster FCP/LCP
- Create automated post-build script for CSS inlining
- Fix TypeScript errors in calendar.tsx (react-day-picker v9+ API)
- Fix TypeScript errors in chart.tsx (missing payload props)
- Remove deprecated critters dependency and experimental optimizeCss
- Add build:optimized script for production deployments
- Configure Vercel to use optimized build with Critical CSS
- Remove package-lock.json to standardize on pnpm
- Update dependencies including beasties and node-html-parser

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:optimized": "next build && node scripts/critical-css.js",
+    "critical-css": "node scripts/critical-css.js",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -64,6 +66,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "beasties": "^0.3.4",
+    "node-html-parser": "^7.0.1",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
