--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "cmdk": "latest",
     "date-fns": "4.1.0",
     "embla-carousel-react": "latest",
+    "exifr": "^7.1.3",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -75,12 +76,14 @@
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
+    "react-photo-album": "^3.1.0",
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
+    "yet-another-react-lightbox": "^3.25.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
