fix(gallery): Fix blur placeholder generation for proper loading states
- Replace Sharp-based blur generation with SVG gradient placeholder
- Remove opacity override that was hiding blur placeholders
- Improve hover effects and loading state management
- Remove unused Sharp dependencies and remote image functions
- Fix function signature and parameter passing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "npm run generate:placeholders && next build",
     "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -14,6 +14,8 @@
     "format:check": "prettier --check .",
     "test": "echo 'Add your test command here'",
     "test:ci": "echo 'Add your CI test command here'",
+    "test:blur": "node scripts/test-blur-generation.js",
+    "generate:placeholders": "node scripts/generate-placeholders.js",
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "commit-msg": "commitlint --edit $1",
@@ -79,6 +81,7 @@
     "react-photo-album": "^3.1.0",
     "react-resizable-panels": "latest",
     "recharts": "latest",
+    "sharp": "^0.33.2",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
