--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npm run generate:placeholders && next build",
+    "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
