perf(gallery): Improve image loading with pre-generated blur placeholders
- Replace runtime SVG blur generation with build-time placeholder generation
- Optimize gallery client by removing unused state and simplifying callbacks
- Add placeholder generation to build process for better performance
- Clean up image utilities and lazy loading implementation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "npm run generate:placeholders && next build",
     "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
