refactor(gallery): Remove placeholder files from git tracking
- Add public/gallery/placeholders/ to .gitignore
- Remove all placeholder .webp files from git tracking
- Placeholders will be auto-generated during build process
- Reduces repository size and maintenance overhead

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # production
 /build
+/public/gallery/placeholders/
 
 # debug
 npm-debug.log*
@@ -26,5 +27,3 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# test files
-test-blur-*.png
